ingress rule/nginxdeployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment  # Name of the nginx deployment
  labels:
    app: nginx
spec:
  replicas: 3  # Number of nginx pods to run
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:latest  # The latest nginx image
          ports:
            - name: http
              containerPort: 80  # nginx listens on port 80
              protocol: TCP
