ingress rule/student.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: student
  labels: 
    app: student
spec:
  replicas: 3
  strategy: 
    type: RollingUpdate
  template:
    metadata: 
      name: student
      labels:
        app: student
    spec:
      containers:
        - name: http
          image: dmirge/student:latest
          resources: 
            requests:    
              cpu: "25m"
              memory: "50Mi"
            limits:      
              cpu: "50m"
              memory: "100Mi"
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
  selector:
    matchLabels:
      app: student
