ingress rule/tododeploment.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: todo
  labels:
    app: todo
spec:
  replicas: 14
  strategy: 
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2  # Maximum number of pods that can be created over the desired replicas
      maxUnavailable: 2  # Maximum number of pods that can be unavailable during the update
  selector:
    matchLabels:
      app: todo
  template:
    metadata: 
      labels:
        app: todo
    spec:
      containers:
        - name: http
          image: dmirge/todo:latest
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
