ingress rule/tomcatdeployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tomcat-deployment  # Name of the tomcat deployment
  labels:
    app: tomcat
spec:
  replicas: 3  # Number of tomcat pods to run
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: tomcat
  template:
    metadata:
      labels:
        app: tomcat
    spec:
      containers:
        - name: tomcat
          image: tomcat:latest  # The latest tomcat image
          ports:
            - name: http
              containerPort: 8080  # Tomcat listens on port 8080
              protocol: TCP
