ingress rule/todo.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: todo 
  labels: 
    app: todo
spec:
  replicas: 3
  strategy: 
    type: RollingUpdate
  template:
    metadata: 
      name: todo
      labels:
        app: todo
    spec:
      containers:
        - name: http
          image: dmirge/todo:latest
          resources: 
            requests:    
              cpu: "25m"
              memory: "50Mi"
            limits:      
              cpu: "50m"
              memory: "100Mi"
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
  selector:
    matchLabels:
      app: todo
---
apiVersion: v1
kind: Service
metadata:
  name: todo-service
  labels:
    app: todo
spec:
  type: ClusterIP  # This exposes the service internally in the cluster
  selector:
    app: todo      # It selects the 'todo' app to route traffic to its pods
  ports:
    - protocol: TCP
      port: 80        # The port the service will expose
      targetPort: 80  # The port your container is listening on
