ingress rule/todoservice.yml
apiVersion: v1
kind: Service
metadata:
  name: todo-service
  labels:
    app: todo
spec:
  type: ClusterIP  # Default service type for internal cluster communication
  selector:
    app: todo  # Matches the pods managed by the todo deployment
  ports:
    - protocol: TCP
      port: 80        # The port that the service will expose
      targetPort: 80  # The port on which the todo container listens
