ingress rule/ingressrule.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: af025a4ee0bf543a985c59eac67a4c2d-1290041203.ap-south-1.elb.amazonaws.com      # Change this to your domain or IP
    http:
      paths:
      - path: /student      # Route for the 'student' service
        pathType: Prefix
        backend:
          service:
            name: student   # Name of the 'student' microservice
            port:
              number: 8080  # Port for the 'student' microservice
      - path: /todo         # Route for the 'todo' service
        pathType: Prefix
        backend:
          service:
            name: todo      # Name of the 'todo' microservice
            port:
              number: 80    # Port for the 'todo' microservice
